.blackbox/tmp/shell_tool_f4d33909c3f9.log
/Users/guillaume_deramchi/Documents/hack-the-gap/mobile-app/backend/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
scripts/fetch-influencers-with-ai.ts(119,9): error TS2451: Cannot redeclare block-scoped variable 'categories'.
scripts/fetch-influencers-with-ai.ts(249,9): error TS2451: Cannot redeclare block-scoped variable 'categories'.
scripts/fetch-influencers-with-ai.ts(256,13): error TS2339: Property 'niche' does not exist on type '{ name: string; count: number; }'.
scripts/fetch-influencers-with-ai.ts(257,28): error TS2339: Property 'niche' does not exist on type '{ name: string; count: number; }'.
scripts/fetch-influencers-with-ai.ts(257,42): error TS2551: Property '_count' does not exist on type '{ name: string; count: number; }'. Did you mean 'count'?

    at createTSError (/Users/guillaume_deramchi/Documents/hack-the-gap/mobile-app/backend/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/Users/guillaume_deramchi/Documents/hack-the-gap/mobile-app/backend/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/Users/guillaume_deramchi/Documents/hack-the-gap/mobile-app/backend/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/Users/guillaume_deramchi/Documents/hack-the-gap/mobile-app/backend/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/Users/guillaume_deramchi/Documents/hack-the-gap/mobile-app/backend/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1422:10)
    at Object.require.extensions.<computed> [as .ts] (/Users/guillaume_deramchi/Documents/hack-the-gap/mobile-app/backend/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1203:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1019:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:128:12) {
  diagnosticCodes: [ 2451, 2451, 2339, 2339, 2551 ]
}
